--- a/static/css/style.css
+++ b/static/css/style.css
@@ -21,3 +21,19 @@ body,
   margin-right: 8px;
   opacity: 0.7;
 }
+
+.title {
+  font-family: Tahoma;
+  text-align: center;
+  background-color: gold;
+}
+
+.subtitle {
+  font-family: Tahoma;
+  padding-left: 10px;
+}
+
+.AnchorLink {
+  font-family: Tahoma;
+  padding-left: 10px;
+}
