--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,14 +1,17 @@
 html,
 body,
 #mapid {
+  padding-top: 0 !important;
+  margin-top: -0.7rem !important;
   width: 100%;
   height: 100%;
   padding: 0;
   margin: 0;
+  background-color: orangered;
 }
 .legend {
   padding: 10px;
-  line-height: 18px;
+  line-height: 19px;
   color: #555;
   background-color: #fff;
   border-radius: 5px;
@@ -23,12 +26,15 @@ body,
 }
 
 .title {
+  margin-bottom: -1rem !important;
   font-family: Tahoma;
   text-align: center;
   background-color: gold;
 }
 
 .subtitle {
+  padding-top: 0 !important;
+  margin-top: -0.7rem !important;
   font-family: Tahoma;
   padding-left: 10px;
 }
@@ -36,4 +42,5 @@ body,
 .AnchorLink {
   font-family: Tahoma;
   padding-left: 10px;
+  margin-top: -2rem !important;
 }
